[package]
name = "influx_receiver"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>", "Tejas Saboo <tejassaboo@utexas.edu>", "Wentao Yang", "Akshay Mantri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4"
rocket_contrib = "^0.4"
influxdb = { version = "^0.1", features = ["derive"] }
sodiumoxide = "^0.2"
base64 = "^0.12"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = "^0.2"
lazy_static = "^1.4"